added arrow button-form

--- a/index.html
+++ b/index.html
@@ -423,16 +423,15 @@
                             <p class="contact"><label for="comment"></label></p>
                             <textarea name="comment" id="comment" placeholder="Ваше сообщение" tabindex="4"></textarea>
                             <br>
-                            <input name="submit" id="submit" tabindex="5" value="Отправить" type="submit">
+                            <button class="button-form">Отправить</button>
 
                             <label>
                                 <input type="checkbox">
-                                <span class="pseudo-checkbox">Я прочитал и принимаю условия
-                                   <a href="#">пользовательского соглашения</a> </span>
+                                <span class="pseudo-checkbox">Я прочитал и принимаю условия <a href="#">пользовательского соглашения</a> </span>
                             </label>
                         </form>
                     </div>
-                    
+
                 </section>
                 <div class="copyright">
                     <p>SIA OL © Visas tiesības aizsargātas 2021</p>
