slider, burger-menu

--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
 <body>
 
     <div class="header-wrapper">
-
         <header class="header">
             <img src="/img/logo.svg" alt="" class="logo">
             <div class="header__content">
@@ -37,9 +36,22 @@
                 <a href="#" class="button__header">Свяжитесь с нами</a>
                 <button class="button-lv">Lv</button>
             </div>
+            <!-- Burger-menu -->
+            <button id="burger__btn" class="burger__btn" type="button">
+                <i></i>
+            </button>
+            <div id="" class="header__nav">
+                <a href="#" class="header-nav__item">Главная</a>
+                <a href="#" class="header-nav__item">О нас</a>
+                <a href="#" class="header-nav__item">Google Adwords</a>
+                <a href="#" class="header-nav__item">SMM</a>
+                <a href="#" class="header-nav__item">SEO</a>
+                <a href="#" class="header-nav__item">Контакты</a>
+                <a href="#" class="button__header">Свяжитесь с нами</a>
+                <button class="button-lv">Lv</button>
+            </div>
 
         </header>
-
         <div class="container">
             <h1 class="header__title">Реклама <br> в Google Ads</h1>
             <p class="header-subscript">Новые клиенты узнают о вашем бизнесе</p>
@@ -120,7 +132,9 @@
                     <p class="list-info">Бюджет рекламной кампании</p>
                     <p class="list-info">до 1000 евро</p>
                     <ul class="list-two">
-                        <li class="list-two__subscription">100 евро</li>
+                        <li class="list-two__subscription">
+                            <p>Стоимость / мес.</p> 100 евро
+                        </li>
                         <li class="list-two__subscription">до 100 запросов</li>
                         <li class="list-two__subscription">до 100 объявлений</li>
                         <li class="list-two__subscription">до 10 кампаний</li>
@@ -158,6 +172,97 @@
             <div class="note-price">
                 <img src="/img/info.svg" alt="" class="img-price">
                 <p class="price">Минимальный бюджет на рекламу составляет от 100 евро / месяц.</p>
+            </div>
+            <!-- Adaptive list -->
+            <div class="adaptive-list">
+                <div class="list-all">
+                    <img src="/img/suitcase.svg" alt="" class="list-icon">
+                    <h3 class="list-title">Малый бизнес</h3>
+                    <p class="list-info">Бюджет рекламной кампании</p>
+                    <p class="list-info">до 1000 евро</p>
+                    <ul class="list-two">
+                        <li class="list-two__subscription">
+                            <p>Стоимость / <br> мес.</p> 100 евро
+                        </li>
+                        <li class="list-two__subscription">
+                            <p>Количество<br> запросов</p> до 100 запросов
+                        </li>
+                        <li class="list-two__subscription">
+                            <p>Количество <br> объявлений</p> до 100<br> объявлений
+                        </li>
+                        <li class="list-two__subscription">
+                            <p>Количество<br> кампаний</p> до 10 кампаний
+                        </li>
+                        <li class="list-check">
+                            <p>Реклама в<br> поиске</p> <img src="/img/check-v.svg" alt="">
+                        </li>
+                        <li class="list-check">
+                            <p>Реклама в КМС</p> <img src="/img/check-v.svg" alt="">
+                        </li>
+                        <li class="list-check">
+                            <p>Ретаргетинг</p> <img src="/img/check-v.svg" alt="">
+                        </li>
+                        <li class="list-check">
+                            <p>Настройка<br> аналитики</p> <img src="/img/check-v.svg" alt="">
+                        </li>
+                        <li class="list-check">
+                            <p>Google my<br> business аккаунт</p> <img src="/img/check-v.svg" alt="">
+                        </li>
+                        <li class="list-check">
+                            <p>Баннерная<br> реклама</p> <img src="/img/check-x.svg" alt="">
+                        </li>
+                        <li class="list-check">
+                            <p>Видеореклама<br> (Youtube)</p> <img src="/img/check-x.svg" alt="">
+                        </li>
+                    </ul>
+                    <a href="#" class="button button--list">Заказать</a>
+                </div>
+                <div class="list-all">
+                    <img src="/img/suitcases.svg" alt="" class="list-icon">
+                    <h3 class="list-title">Средний бизнес</h3>
+                    <p class="list-info">Бюджет рекламной кампании</p>
+                    <p class="list-info">до 1000 евро</p>
+                    <ul class="list-two">
+                        <li class="list-two__subscription">
+                            <p>Стоимость /<br> мес.</p> 10-25% бюджета кампании
+                        </li>
+                        <li class="list-two__subscription">
+                            <p>Количество<br> запросов</p> до 1000 запросов
+                        </li>
+                        <li class="list-two__subscription">
+                            <p>Количество<br> объявлений</p> до 1000 <br> объявлений
+                        </li>
+                        <li class="list-two__subscription">
+                            <p>Количество<br> кампаний</p> до 25 кампаний
+                        </li>
+                        <li class="list-check">
+                            <p>Реклама в<br> поиске</p> <img src="/img/check-v.svg" alt="">
+                        </li>
+                        <li class="list-check">
+                            <p>Реклама в КМС</p> <img src="/img/check-v.svg" alt="">
+                        </li>
+                        <li class="list-check">
+                            <p>Ретаргетинг</p> <img src="/img/check-v.svg" alt="">
+                        </li>
+                        <li class="list-check">
+                            <p>Настройка <br> аналитики</p> <img src="/img/check-v.svg" alt="">
+                        </li>
+                        <li class="list-check">
+                            <p>Google my <br> business аккаунт</p> <img src="/img/check-v.svg" alt="">
+                        </li>
+                        <li class="list-check">
+                            <p>Баннерная <br> реклама</p> <img src="/img/check-v.svg" alt="">
+                        </li>
+                        <li class="list-check">
+                            <p>Видеореклама <br> (Youtube)</p> <img src="/img/check-v.svg" alt="">
+                        </li>
+                    </ul>
+                    <a href="#" class="button button--list">Заказать</a>
+                </div>
+                <div class="note-price">
+                    <img src="/img/info.svg" alt="" class="img-price">
+                    <p class="price">Минимальный бюджет на рекламу составляет от 100 евро / месяц.</p>
+                </div>
             </div>
         </div>
     </div>
@@ -571,17 +676,17 @@
 
     </footer>
 
-
+    <script>
+        let burger = document.querySelector('.burger__btn');
+        burger.onclick = function () {
+            this.classList.toggle('active');
+        }
+    </script>
 
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script type="text/javascript" src="/libs/slick/slick.min.js"></script>
     <script src="/script.js"></script>
-
-
-
-
-
 
 
 </body>
